--- a/SSfMT.html
+++ b/SSfMT.html
@@ -44,18 +44,18 @@
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
-<li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a><li><a href="./SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a><li><a href="./SSfMT/Practicals/Buses and Ndefs.html">Buses and Ndefs</a></ul>
+<li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a><li><a href="./SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a><li><a href="./SSfMT/Practicals/Buses and Ndefs.html">Buses and Ndefs</a><li><a href="./SSfMT/Practicals/Interfacing.html">Interfacing</a></ul>
 
 <p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
 <ul>
-<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 1/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 19/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 26/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 2/2<li><a href="./SSfMT/Tasks/Task 7.html">Task 7</a> - Due 9/2<li><a href="./SSfMT/Tasks/Task 8.html">Task 8</a> - Due 16/2</ul>
+<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 1/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 19/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 26/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 2/2<li><a href="./SSfMT/Tasks/Task 7.html">Task 7</a> - Due 9/2<li><a href="./SSfMT/Tasks/Task 8.html">Task 8</a> - Due 16/2<li><a href="./SSfMT/Tasks/Task 9.html">Task 9</a> - Due 2/3</ul>
 
 <p><h3><a class='anchor' name='Study%20Guides'>Study Guides</a></h3>
 <ul>
 <li><a href="./SSfMT/Study Guides/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a><li><a href="./SSfMT/Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./SSfMT/Study Guides/Deconstructing SC code.html">Deconstructing SC code</a><li><a href="./SSfMT/Study Guides/Buffer Tricks.html">Buffer Tricks</a></ul>
 <h3><a class='anchor' name='Code%20Examples'>Code Examples</a></h3>
 <ul>
-<li><a href="./SSfMT/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./SSfMT/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./SSfMT/Code Examples/MIDI File Fun.html">MIDI File Fun</a><li><a href="./SSfMT/Code Examples/FX Fun.html">FX Fun</a><li><a href="./SSfMT/Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./SSfMT/Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a></ul>
+<li><a href="./SSfMT/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./SSfMT/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./SSfMT/Code Examples/MIDI File Fun.html">MIDI File Fun</a><li><a href="./SSfMT/Code Examples/FX Fun.html">FX Fun</a><li><a href="./SSfMT/Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./SSfMT/Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a><li><a href="./SSfMT/Code Examples/Mixing Things.html">Mixing Things</a></ul>
 <h2><a class='anchor' name='News'>News</a></h2>
 
 <p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Events'>Events</a></h3>
